--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
       <head>
         <title>About me</title>
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
